--- a/.gitmodules
+++ b/.gitmodules
@@ -42,7 +42,7 @@
 	url = git@github.com:geotagx/geotagx-project-sample
 [submodule "project-template"]
 	path = project-template
-	url = git@github.com:spmohanty/geotagx_project_template
+	url = git@github.com:geotagx/geotagx-project-template
 [submodule "theme"]
 	path = theme
-	url = git@github.com:spmohanty/geotagx-theme
+	url = git@github.com:geotagx/geotagx-theme
