Add the GeoTag-X project documentation to the project tree

--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "plugins/pybossa-geotagx"]
 	path = plugins/pybossa-geotagx
 	url = https://github.com/geotagx/geotagx-plugin.git
+[submodule "documentation"]
+	path = documentation
+	url = https://github.com/othieno/geotagx-documentation.git
